; ModuleID = '/home/carl/AnghaBench/esp-idf/components/protocomm/src/simple_ble/extr_simple_ble.c_gap_event_handler.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/protocomm/src/simple_ble/extr_simple_ble.c_gap_event_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@adv_config_flag = common dso_local global i32 0, align 4
@adv_config_done = common dso_local global i32 0, align 4
@g_ble_cfg_p = common dso_local global %struct.TYPE_2__* null, align 8
@scan_rsp_config_flag = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @gap_event_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gap_event_handler(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %30 [
    i32 129, label %6
    i32 128, label %18
  ]

6:                                                ; preds = %2
  %7 = load i32, i32* @adv_config_flag, align 4
  %8 = xor i32 %7, -1
  %9 = load i32, i32* @adv_config_done, align 4
  %10 = and i32 %9, %8
  store i32 %10, i32* @adv_config_done, align 4
  %11 = load i32, i32* @adv_config_done, align 4
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %6
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @g_ble_cfg_p, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = call i32 @esp_ble_gap_start_advertising(i32* %15)
  br label %17

17:                                               ; preds = %13, %6
  br label %31

18:                                               ; preds = %2
  %19 = load i32, i32* @scan_rsp_config_flag, align 4
  %20 = xor i32 %19, -1
  %21 = load i32, i32* @adv_config_done, align 4
  %22 = and i32 %21, %20
  store i32 %22, i32* @adv_config_done, align 4
  %23 = load i32, i32* @adv_config_done, align 4
  %24 = icmp eq i32 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %18
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** @g_ble_cfg_p, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = call i32 @esp_ble_gap_start_advertising(i32* %27)
  br label %29

29:                                               ; preds = %25, %18
  br label %31

30:                                               ; preds = %2
  br label %31

31:                                               ; preds = %30, %29, %17
  ret void
}

declare dso_local i32 @esp_ble_gap_start_advertising(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
